<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#e1bffd"
    android:screenOrientation="portrait"
    android:configChanges="keyboardHidden|orientation|screenSize"
    android:id="@+id/layoutContent"
    tools:context="com.example.owner.minesweeper.MainActivity">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minesweeper"
            android:textSize="50sp"
            android:textColor="#ffffff" />

    </com.facebook.shimmer.ShimmerFrameLayout>

    <EditText
        android:id="@+id/etGuess"
        android:inputType="number"
        android:digits="123456789"
        android:hint="@string/numSquares_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startBtn" />

    <Button
        android:id="@+id/infoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info" />


</LinearLayout>
