<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/layoutContent"
    tools:context="com.example.owner.minesweeper.StartScreen">

    <TextView
        android:id="@+id/winnerMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.example.owner.minesweeper.MineSweeperView
        android:id="@+id/mineSweeperView"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/tooManyFlagsMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark" />

    <ToggleButton
        android:id="@+id/btToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset" />

</LinearLayout>
